# qalaxy

./: Cargo.toml  README.md  index.html  index.js  tsconfig.json
example/: index.js  style.css  util.js
src/: display.js  display.ts  events.js  index.js  index.ts  lib.rs  queue.js  render.js  render.ts  style.css
src/util/: configure.js  configure.ts  events.js  events.ts  style.js  style.ts
